canvas is hidden on click

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ if(evt.keyCode==48){
 
 <div id="theCanvas"></div>
 
-<script src=./js/sketch.js>
+<script src="./js/sketch.js" type="text/javascript"></script>
 
 
 
